:bug: Fix project name too long

--- a/frontend/src/app/main/ui/dashboard/grid.scss
+++ b/frontend/src/app/main/ui/dashboard/grid.scss
@@ -18,7 +18,7 @@ $thumbnail-default-height: $s-168; // Default width
 }
 
 .grid-row {
-  display: flex;
+  display: grid;
   width: 100%;
   gap: $s-24;
 }
